--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EventVerse – Ignite the Future of Innovation</title>
+  <title>My Dashboard – Your Registered Events</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
   <nav>
     <div class="logo">⚡ EventVerse</div>
     <ul class="nav-menu">
-      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="events.html">Events</a></li>
       <li><a href="register.html">Register</a></li>
@@ -49,55 +49,45 @@
     <section class="hero">
       <div class="hero-bg"></div>
       <div class="hero-content">
-        <h1>EventVerse – Ignite the Future of Innovation</h1>
-        <p>Experience the most immersive tech fest. Network with innovators, compete in thrilling challenges, and shape tomorrow's technology.</p>
-        <div class="hero-buttons">
-          <button class="btn btn-primary">Register Now</button>
-          <button class="btn btn-secondary">View Schedule</button>
-        </div>
+        <h1>My Dashboard – Your Registered Events</h1>
+        <p>Track your registrations and confirmations</p>
       </div>
     </section>
 
-    <!-- HIGHLIGHTS SECTION -->
-    <section style="background: var(--bg-primary);">
+    <!-- DASHBOARD CONTENT -->
+    <section style="background: var(--bg-primary); padding: 60px 0;">
       <div class="container">
-        <h2>Festival Highlights</h2>
-        <p>Discover what makes EventVerse the ultimate innovation hub</p>
-        <div class="grid grid-3">
-          <div class="card">
-            <h3>50+ Events</h3>
-            <p>From hackathons to coding battles, workshops to gaming tournaments—diverse competition tracks for every innovator.</p>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 40px;">
+          <div class="card" style="text-align: center;">
+            <h3 style="color: var(--accent-glow); font-size: 32px;" id="totalRegistrations">0</h3>
+            <p>Total Registrations</p>
           </div>
-          <div class="card">
-            <h3>₹50 Lakhs Prize</h3>
-            <p>Compete for massive rewards. Top performers win cash prizes, internships, and industry recognition.</p>
+          <div class="card" style="text-align: center;">
+            <h3 style="color: var(--success-color); font-size: 32px;">✓</h3>
+            <p>Confirmed</p>
           </div>
-          <div class="card">
-            <h3>500+ Participants</h3>
-            <p>Network with tech enthusiasts from colleges across the country. Build connections that last.</p>
+          <div class="card" style="text-align: center;">
+            <h3 style="color: var(--accent-secondary); font-size: 32px;">📅</h3>
+            <p>Upcoming</p>
           </div>
-          <div class="card">
-            <h3>Industry Leaders</h3>
-            <p>Learn from keynote speakers and mentors from Google, Microsoft, Amazon, and startups.</p>
-          </div>
-          <div class="card">
-            <h3>Live Workshops</h3>
-            <p>Hands-on sessions in AI, Web3, IoT, Machine Learning, and emerging technologies.</p>
-          </div>
-          <div class="card">
-            <h3>Sponsor Partners</h3>
-            <p>Powered by leading tech companies and innovation partners worldwide.</p>
+          <div class="card" style="text-align: center;">
+            <h3 style="color: var(--text-muted); font-size: 32px;">🎟</h3>
+            <p>Active Events</p>
           </div>
         </div>
-      </div>
-    </section>
 
-    <!-- CTA SECTION -->
-    <section style="background: linear-gradient(135deg, rgba(58, 128, 246, 0.1), rgba(0, 196, 255, 0.1)); padding: 80px 0; text-align: center;">
-      <div class="container">
-        <h2 style="font-size: 42px; margin-bottom: 20px;">Ready to Be Part of the Revolution?</h2>
-        <p style="font-size: 18px; margin-bottom: 40px;">Register today and join 500+ innovators transforming technology</p>
-        <button class="btn btn-primary" style="padding: 15px 50px; font-size: 18px;">Register Now</button>
+        <h2 style="margin-top: 50px; margin-bottom: 30px;">Your Registrations</h2>
+        <div id="registrationsList" style="display: grid; gap: 20px;">
+          <!-- Registrations will be populated by JavaScript -->
+        </div>
+
+        <div id="emptyState" style="text-align: center; padding: 60px 20px;">
+          <h3 style="color: var(--text-muted); margin-bottom: 20px;">No registrations yet</h3>
+          <p style="color: var(--text-muted); margin-bottom: 30px;">You haven't registered for any events yet</p>
+          <a href="register.html" class="btn btn-primary">Register for Events</a>
+        </div>
+
+        <button class="btn btn-secondary" style="margin-top: 40px;" onclick="clearAllData()">Clear All Data</button>
       </div>
     </section>
   </main>
@@ -136,17 +126,7 @@
     </div>
   </footer>
 
-  <!-- SUCCESS MODAL -->
-  <div class="modal" id="successModal">
-    <div class="modal-content">
-      <button class="modal-close" id="closeModal">&times;</button>
-      <h2 style="color: var(--success-color); margin-bottom: 20px;">Success!</h2>
-      <p id="modalMessage">Your action was completed successfully.</p>
-      <button class="btn btn-primary" style="margin-top: 20px;" id="okButton">OK</button>
-    </div>
-  </div>
-
   <script src="main.js"></script>
-  <script src="index.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 </html>
