--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,28 @@
 </head>
 <body>
   <!-- NAVBAR -->
-  <nav>
-    <div class="logo">⚡ EventVerse</div>
-    <ul class="nav-menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
-    </ul>
+  <nav class="navbar">
+  <div class="navbar-container">
+    <a href="index.html" class="logo">
+      <img src="public/logoo.png" alt="EventVerse Logo" class="logo-img">
+      <span class="logo-text">EventVerse</span>
+    </a>
+   <ul class="nav-menu">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+         <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     <div class="hamburger">
       <span></span>
       <span></span>
       <span></span>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- SIDEBAR -->
   <aside class="sidebar">
@@ -158,7 +165,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 EventVerse. All rights reserved. Crafted with innovation and passion.</p>
+        <p>🧠; 2025 EventVerse. All rights reserved. Crafted with innovation and passion.</p>
       </div>
     </div>
   </footer>
