--- a/dashboard.html
+++ b/dashboard.html
@@ -8,41 +8,30 @@
 </head>
 <body>
   <!-- NAVBAR -->
-  <nav>
-    <div class="logo">⚡ EventVerse</div>
-    <ul class="nav-menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+  <!-- NAVBAR -->
+  <nav class="navbar">
+  <div class="navbar-container">
+    <a href="index.html" class="logo">
+      <img src="public/logoo.png" alt="EventVerse Logo" class="logo-img">
+      <span class="logo-text">EventVerse</span>
+    </a>
+   <ul class="nav-menu">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+         <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     <div class="hamburger">
       <span></span>
       <span></span>
       <span></span>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- SIDEBAR -->
-  <aside class="sidebar">
-    <ul class="sidebar-menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About EventVerse</a></li>
-      <li><a href="events.html">Explore Events</a></li>
-      <li><a href="schedule.html">Fest Schedule</a></li>
-      <li><a href="workshops.html">Workshops</a></li>
-      <li><a href="competitions.html">Competitions</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="dashboard.html">My Dashboard</a></li>
-      <li><a href="speakers.html">Speakers</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="sponsors.html">Sponsors</a></li>
-      <li><a href="faq.html">FAQ</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-      <li><a href="admins.html">Admin Panel</a></li>
-    </ul>
-  </aside>
 
   <main>
     <!-- HERO SECTION -->
@@ -52,6 +41,7 @@
         <h1>My Dashboard – Your Registered Events</h1>
         <p>Track your registrations and confirmations</p>
       </div>
+      
     </section>
 
     <!-- DASHBOARD CONTENT -->
@@ -121,7 +111,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 EventVerse. All rights reserved. Crafted with innovation and passion.</p>
+        <p>🧠; 2025 EventVerse. All rights reserved. Crafted with innovation and passion.</p>
       </div>
     </div>
   </footer>
