--- a/schedule.html
+++ b/schedule.html
@@ -85,15 +85,15 @@
       <img src="public/logoo.png" alt="EventVerse Logo" class="logo-img">
       <span class="logo-text">EventVerse</span>
     </a>
-  <ul class="nav-menu">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-
+   <ul class="nav-menu">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+         <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     <div class="hamburger">
       <span></span>
       <span></span>
@@ -139,9 +139,9 @@
         <div style="margin-bottom: 40px;">
           <select id="dayFilter" style="padding: 12px 15px; min-width: 200px;">
             <option value="">All Days</option>
-            <option value="day1">Day 1 - March 15</option>
-            <option value="day2">Day 2 - March 16</option>
-            <option value="day3">Day 3 - March 17</option>
+            <option value="day1">Day 1 - Nov 15</option>
+            <option value="day2">Day 2 - Nov 16</option>
+            <option value="day3">Day 3 - Nov 17</option>
           </select>
         </div>
 
