--- a/gallery.html
+++ b/gallery.html
@@ -3,65 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speakers & Judges – The Minds Behind the Magic</title>
+  <title>Gallery – Relive the Moments</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    .speaker-card {
-      background: var(--bg-surface);
-      border: 1px solid var(--border-color);
-      border-radius: 12px;
-      overflow: hidden;
-      transition: all 0.3s ease;
-    }
-
-    .speaker-card:hover {
-      transform: translateY(-10px);
-      border-color: var(--accent-primary);
-      box-shadow: 0 15px 40px rgba(58, 128, 246, 0.3);
-    }
-
-    .speaker-avatar {
-      width: 100%;
-      height: 250px;
-      background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 80px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .speaker-avatar::after {
-      content: '';
-      position: absolute;
+    .lightbox {
+      display: none;
+      position: fixed;
       top: 0;
       left: 0;
-      right: 0;
-      bottom: 0;
-      background: radial-gradient(circle, rgba(255,255,255,0.1) 1px, transparent 1px);
-      background-size: 20px 20px;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      z-index: 3000;
+      align-items: center;
+      justify-content: center;
     }
 
-    .speaker-info {
-      padding: 20px;
+    .lightbox.active {
+      display: flex;
     }
 
-    .speaker-info h3 {
-      color: var(--accent-secondary);
-      margin-bottom: 5px;
+    .lightbox-content {
+      position: relative;
+      max-width: 90%;
+      max-height: 90%;
     }
 
-    .speaker-title {
-      color: var(--text-muted);
-      font-size: 13px;
-      margin-bottom: 12px;
+    .lightbox img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
 
-    .speaker-bio {
-      color: var(--text-muted);
-      font-size: 13px;
-      line-height: 1.6;
+    .lightbox-close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--accent-primary);
+      color: white;
+      border: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      font-size: 24px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 20px rgba(58, 128, 246, 0.5);
+    }
+
+    .lightbox-close:hover {
+      background: var(--accent-secondary);
+      box-shadow: 0 0 30px rgba(0, 196, 255, 0.7);
     }
   </style>
 </head>
@@ -74,15 +66,15 @@
       <img src="public/logoo.png" alt="EventVerse Logo" class="logo-img">
       <span class="logo-text">EventVerse</span>
     </a>
-  <ul class="nav-menu">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-
+   <ul class="nav-menu">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+         <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     <div class="hamburger">
       <span></span>
       <span></span>
@@ -116,33 +108,30 @@
     <section class="hero">
       <div class="hero-bg"></div>
       <div class="hero-content">
-        <h1>Speakers & Judges – The Minds Behind the Magic</h1>
-        <p>Learn from industry leaders and innovation pioneers</p>
+        <h1>Gallery – Relive the Moments</h1>
+        <p>Memories from EventVerse through the years</p>
       </div>
     </section>
 
-    <!-- KEYNOTE SPEAKERS -->
+    <!-- GALLERY SECTION -->
     <section style="background: var(--bg-primary);">
       <div class="container">
-        <h2>Keynote Speakers</h2>
-        <p>Visionary leaders sharing insights and inspiration</p>
-        <div class="grid grid-3" style="margin-top: 40px;" id="speakersGrid">
-          <!-- Speakers will be populated by JavaScript -->
-        </div>
-      </div>
-    </section>
-
-    <!-- JUDGES -->
-    <section style="background: var(--bg-surface); padding: 60px 0;">
-      <div class="container">
-        <h2>Judges & Mentors</h2>
-        <p>Expert evaluators shaping tomorrow's innovators</p>
-        <div class="grid grid-3" style="margin-top: 40px;" id="judgesGrid">
-          <!-- Judges will be populated by JavaScript -->
+        <h2>Event Memories</h2>
+        <p>Click on any image to view fullscreen</p>
+        <div class="gallery-grid" id="galleryGrid">
+          <!-- Gallery items will be populated by JavaScript -->
         </div>
       </div>
     </section>
   </main>
+
+  <!-- LIGHTBOX -->
+  <div class="lightbox" id="lightbox">
+    <div class="lightbox-content">
+      <button class="lightbox-close" onclick="closeLightbox()">&times;</button>
+      <img id="lightboxImage" src="/placeholder.svg" alt="">
+    </div>
+  </div>
 
   <!-- FOOTER -->
   <footer>
@@ -179,6 +168,6 @@
   </footer>
 
   <script src="main.js"></script>
-  <script src="speakers.js"></script>
+  <script src="gallery.js"></script>
 </body>
 </html>
