--- a/index.html
+++ b/index.html
@@ -6,100 +6,282 @@
   <title>EventVerse – Ignite the Future of Innovation</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <!-- NAVBAR -->
-  <nav>
-    <div class="logo">⚡ EventVerse</div>
-    <ul class="nav-menu">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+  <nav class="navbar">
+  <div class="navbar-container">
+    <a href="index.html" class="logo">
+      <img src="public/logoo.png" alt="EventVerse Logo" class="logo-img">
+      <span class="logo-text">EventVerse</span>
+    </a>
+   <ul class="nav-menu">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+         <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     <div class="hamburger">
       <span></span>
       <span></span>
       <span></span>
     </div>
-  </nav>
-
-  <!-- SIDEBAR -->
-  <aside class="sidebar">
-    <ul class="sidebar-menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About EventVerse</a></li>
-      <li><a href="events.html">Explore Events</a></li>
-      <li><a href="schedule.html">Fest Schedule</a></li>
-      <li><a href="workshops.html">Workshops</a></li>
-      <li><a href="competitions.html">Competitions</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="dashboard.html">My Dashboard</a></li>
-      <li><a href="speakers.html">Speakers</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="sponsors.html">Sponsors</a></li>
-      <li><a href="faq.html">FAQ</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-      <li><a href="admins.html">Admin Panel</a></li>
-    </ul>
-  </aside>
+  </div>
+</nav>
 
   <main>
-    <!-- HERO SECTION -->
-    <section class="hero">
-      <div class="hero-bg"></div>
-      <div class="hero-content">
-        <h1>EventVerse – Ignite the Future of Innovation</h1>
-        <p>Experience the most immersive tech fest. Network with innovators, compete in thrilling challenges, and shape tomorrow's technology.</p>
-        <div class="hero-buttons">
-          <button class="btn btn-primary">Register Now</button>
-          <button class="btn btn-secondary">View Schedule</button>
-        </div>
+   <!-- HERO SECTION -->
+<section class="hero">
+  <div class="hero-bg"></div>
+
+  <div class="hero-container">
+    <!-- Left Text Content -->
+    <div class="hero-text">
+      <h1>EventVerse — Ignite the Future of Innovation</h1>
+      <p>
+        Experience the most immersive tech fest. Network with innovators,
+        compete in thrilling challenges, and shape tomorrow's technology.
+      </p>
+      <div class="hero-buttons">
+        <a href="register.html" class="btn btn-primary">Register Now</a>
+        <a href="schedule.html" class="btn btn-secondary">View Schedule</a>
       </div>
-    </section>
+    </div>
+
+    <!-- Right Image -->
+    <div class="hero-image">
+      <img src="public/brainglow.png" alt="EventVerse Tech Innovation">
+    </div>
+  </div>
+</section>
+
+<style>
+/* ===== HERO SECTION STYLES ===== */
+.hero {
+  position: relative;
+  padding: 120px 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.hero-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1200px;
+  width: 100%;
+  gap: 60px;
+}
+
+/* LEFT TEXT SECTION */
+.hero-text {
+  flex: 1;
+  text-align: left;
+}
+
+.hero-text h1 {
+  font-size: 3rem;
+  font-weight: 800;
+  background: linear-gradient(135deg, #0A84FF, #00FFC6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 20px;
+  line-height: 1.2;
+}
+
+.hero-text p {
+  font-size: 1.2rem;
+  color: #CBD5E1;
+  margin-bottom: 2rem;
+  line-height: 1.7;
+}
+
+.hero-buttons {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-start;
+}
+
+.hero-bg,
+#particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;               /* ensure it's behind */
+  pointer-events: none;     /* allow clicks to pass through */
+}
+
+.hero-content, 
+.hero-container {
+  position: relative;
+  z-index: 5;               /* bring content above the background */
+}
+
+/* RIGHT IMAGE SECTION */
+.hero-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: floatUpDown 6s ease-in-out infinite;
+}
+
+.hero-image img {
+  width: 360px;
+  height: auto;
+  border-radius: 50%;
+  filter: drop-shadow(0 0 25px #3a80f6) brightness(1.3);
+  animation: glowPulse 3s ease-in-out infinite alternate;
+}
+
+/* BUTTON STYLE ENHANCEMENTS */
+.btn-primary {
+  background: linear-gradient(135deg, #0A84FF, #00FFC6);
+}
+
+.btn-secondary {
+  background: transparent;
+  border: 2px solid #00FFC6;
+  color: #00FFC6;
+}
+
+/* ANIMATIONS */
+@keyframes glowPulse {
+  0% { filter: drop-shadow(0 0 10px #3a80f6) brightness(1.1); }
+  100% { filter: drop-shadow(0 0 30px #00FFC6) brightness(1.5); }
+}
+
+@keyframes floatUpDown {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-15px); }
+}
+
+/* RESPONSIVE DESIGN */
+@media (max-width: 1024px) {
+  .hero-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .hero-text {
+    text-align: center;
+  }
+
+  .hero-buttons {
+    justify-content: center;
+  }
+
+  .hero-image img {
+    width: 280px;
+  }
+
+  .hero-text h1 {
+    font-size: 2.3rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .hero {
+    padding: 80px 20px;
+  }
+
+  .hero-text h1 {
+    font-size: 2rem;
+  }
+
+  .hero-text p {
+    font-size: 1rem;
+  }
+}
+</style>
+
+
 
     <!-- HIGHLIGHTS SECTION -->
-    <section style="background: var(--bg-primary);">
-      <div class="container">
-        <h2>Festival Highlights</h2>
-        <p>Discover what makes EventVerse the ultimate innovation hub</p>
-        <div class="grid grid-3">
-          <div class="card">
-            <h3>50+ Events</h3>
-            <p>From hackathons to coding battles, workshops to gaming tournaments—diverse competition tracks for every innovator.</p>
-          </div>
-          <div class="card">
-            <h3>₹50 Lakhs Prize</h3>
-            <p>Compete for massive rewards. Top performers win cash prizes, internships, and industry recognition.</p>
-          </div>
-          <div class="card">
-            <h3>500+ Participants</h3>
-            <p>Network with tech enthusiasts from colleges across the country. Build connections that last.</p>
-          </div>
-          <div class="card">
-            <h3>Industry Leaders</h3>
-            <p>Learn from keynote speakers and mentors from Google, Microsoft, Amazon, and startups.</p>
-          </div>
-          <div class="card">
-            <h3>Live Workshops</h3>
-            <p>Hands-on sessions in AI, Web3, IoT, Machine Learning, and emerging technologies.</p>
-          </div>
-          <div class="card">
-            <h3>Sponsor Partners</h3>
-            <p>Powered by leading tech companies and innovation partners worldwide.</p>
-          </div>
-        </div>
-      </div>
-    </section>
+<section style="background: var(--bg-primary); padding: 80px 0;">
+  <div class="container">
+    <h2>Festival Highlights</h2>
+    <p>Discover what makes EventVerse the ultimate innovation hub</p>
 
-    <!-- CTA SECTION -->
-    <section style="background: linear-gradient(135deg, rgba(58, 128, 246, 0.1), rgba(0, 196, 255, 0.1)); padding: 80px 0; text-align: center;">
-      <div class="container">
-        <h2 style="font-size: 42px; margin-bottom: 20px;">Ready to Be Part of the Revolution?</h2>
-        <p style="font-size: 18px; margin-bottom: 40px;">Register today and join 500+ innovators transforming technology</p>
-        <button class="btn btn-primary" style="padding: 15px 50px; font-size: 18px;">Register Now</button>
+    <div class="grid grid-3">
+      <div class="card">
+        <h3>💻 50+ Events</h3>
+        <p>From hackathons to coding battles, workshops to gaming tournaments—diverse competition tracks for every innovator.</p>
       </div>
-    </section>
+
+      <div class="card">
+        <h3>🏆 ₹50 Lakhs Prize</h3>
+        <p>Compete for massive rewards. Top performers win cash prizes, internships, and industry recognition.</p>
+      </div>
+
+      <div class="card">
+        <h3>👥 500+ Participants</h3>
+        <p>Network with tech enthusiasts from colleges across the country. Build connections that last.</p>
+      </div>
+
+      <div class="card">
+        <h3>🌐 Industry Leaders</h3>
+        <p>Learn from keynote speakers and mentors from Google, Microsoft, Amazon, and leading startups.</p>
+      </div>
+
+      <div class="card">
+        <h3>🧠 Live Workshops</h3>
+        <p>Hands-on sessions in AI, Web3, IoT, Machine Learning, and emerging technologies.</p>
+      </div>
+
+      <div class="card">
+        <h3>🤝 Sponsor Partners</h3>
+        <p>Powered by leading tech companies and innovation partners worldwide.</p>
+      </div>
+
+      <!-- NEW ADDITION 1 -->
+      <div class="card">
+        <h3>🎤 Keynote Sessions</h3>
+        <p>Attend inspiring talks from global innovators, entrepreneurs, and technologists redefining the future.</p>
+      </div>
+
+      <!-- NEW ADDITION 2 -->
+      <div class="card">
+        <h3>🎉 Cultural Night</h3>
+        <p>Unwind with music, dance, and performances that celebrate creativity and diversity beyond the code.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+   <!-- CTA SECTION -->
+<section
+  style="
+    background: linear-gradient(135deg, rgba(58, 128, 246, 0.1), rgba(0, 196, 255, 0.1));
+    padding: 80px 0;
+    text-align: center;
+  "
+>
+  <div class="container">
+    <h2 style="font-size: 42px; margin-bottom: 20px;">
+      Ready to Be Part of the Revolution?
+    </h2>
+    <p style="font-size: 18px; margin-bottom: 40px;">
+      Register today and join 500+ innovators transforming technology
+    </p>
+
+    <!-- ✅ Linked to dashboard.html -->
+    <a href="dashboard.html" class="btn btn-primary" 
+       style="padding: 15px 50px; font-size: 18px; text-decoration: none; display: inline-block;">
+      Go to Dashboard
+    </a>
+  </div>
+  
+</section>
+
   </main>
 
   <!-- FOOTER -->
@@ -131,7 +313,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 EventVerse. All rights reserved. Crafted with innovation and passion.</p>
+        <p>🧠; 2025 EventVerse. All rights reserved. Crafted with innovation and passion.</p>
       </div>
     </div>
   </footer>
